=== JavaScriptCore-312.1.1 ===

2005-11-4  Timothy Hatcher  <timothy@apple.com>

        Merging fix from Ti-2005-009-branch to Safari-1-3-branch

    2005-11-04  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by darin.

        - Fixed <rdar://problem/4317701> *SecUpd: Tiger* PCRE heap overflow 
          in Safari JavaScriptCore

        * pcre/pcre.c:
        (read_repeat_counts): We now return an error for negative repeat counts
        in regular expressions. This matches Firefox exactly, and Win IE by 
        effect (Win IE doesn't return an error, but it does refuse to match 
        anything).

=== JavaScriptCore-312.1 ===

2005-07-12  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-1-3-branch
        <rdar://problem/4164997>

    2005-04-26  Richard Williamson   <rjw@apple.com>

	Fixed <rdar://problem/4098713> Scripting API is incompatible with Mozilla
	
	We were incompatible with Mozilla's implementation of the scripting APIs in
	two ways:

	Their NPN_SetException has the following signature:

            void NPN_SetException(NPObject *npobj, const NPUTF8 *message);

	ours has:

            void NPN_SetException (NPObject * npobj, const NPString *message);

	Also, they expect the string returned from NPN_UTF8FromIdentifier() to be freed by caller.
	We do not.

	I changed both behaviors to match Mozilla.

        Reviewed by Chris.

        * bindings/NP_jsobject.cpp:
        (_NPN_SetException):
        * bindings/npruntime.cpp:
        (_NPN_UTF8FromIdentifier):
        (_NPN_IntFromIdentifier):
        (_NPN_SetExceptionWithUTF8):
        * bindings/npruntime.h:
        * bindings/npruntime_impl.h:

2005-07-12  Adele Peterson  <adele@apple.com>

        Merging fix from TOT to Safari-1-3-branch
        <rdar://problem/4164929> String.replace() method not working when regex pattern contains {n, m}

    2005-06-21  Adele Peterson  <adele@apple.com>

        Patch from Anders Carlsson <andersca@mac.com>, reviewed by Darin.
