@@ -1,3 +1,14 @@
+2005-11-11  Timothy Hatcher  <timothy@apple.com>
+
+        Merges fixes from TOT to Safari-1-3-branch
+
+    2005-06-20  Anders Carlsson  <andersca@mac.com>
+
+        Fixed: <http://bugzilla.opendarwin.org/show_bug.cgi?id=3294>
+
+        * kjs/string_object.cpp:
+        (replace): Handle the second argument of replace being a function.
+
 === JavaScriptCore-312.1.1 ===
 
 2005-11-4  Timothy Hatcher  <timothy@apple.com>
